--- a/Yoga-pose-final.ipynb
+++ b/Yoga-pose-final.ipynb
@@ -32,6 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#call mediapipe pose and draw utils\n",
     "mp_pose = mp.solutions.pose\n",
     "mp_drawing = mp.solutions.drawing_utils"
    ]
@@ -65,6 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#we'll be working with these 3 poses\n",
     "labels = ['downdog', 'plank', 'warrior2']"
    ]
   },
@@ -100,6 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#basic 1D cnn model, suitable for our input\n",
     "model = Sequential()\n",
     "model.add(Conv1D(filters = 64, kernel_size = 3, activation='relu',input_shape=(132,1)))\n",
     "model.add(Conv1D(filters = 64, kernel_size = 3, activation='relu'))\n",
@@ -116,6 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#loading pre-trained weights, with >90% accuracy\n",
     "model.load_weights('model.h5')"
    ]
   },
@@ -201,6 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dictionary to make grabing specific keypoints coordinates easier\n",
     "kp_map = {\n",
     "    0:nose,\n",
     "    1:left_eye_inner,\n",
@@ -245,6 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#grabbing 3 cords to calculate angle\n",
     "def get_3_cords(a, b, c):\n",
     "    cord_1 = kp_map.get(a)()\n",
     "    cord_2 = kp_map.get(b)()\n",
@@ -259,6 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#calculating angle\n",
     "def get_angle(a,b,c):\n",
     "    a = np.array(a)\n",
     "    b = np.array(b)\n",
@@ -280,6 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#define the main angles/joints, there are 8 in total, with this we can easily determine the current subject pose to compare.\n",
     "def GetMainAngles():\n",
     "    a, b, c = get_3_cords(13, 11, 23)\n",
     "    up_left_1 = get_angle(a,b,c)\n",
@@ -315,6 +323,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#draw a warning if the joint arent in a specific angle\n",
+    "#please note the resolution of the video example and webcam are different, it will affect the location of the drawn warning if not set properly\n",
     "def DrawError(ul1, ul2, ur1, ur2, dl1, dl2, dr1, dr2):\n",
     "    global tul1, tul2, tur1, tur2, tdl1, tdl2, tdr1, tdr2\n",
     "    #L-upper 1\n",
@@ -660,6 +670,7 @@
     }
    ],
    "source": [
+    "#display result\n",
     "cap = cv.VideoCapture(\"C:\\\\Users\\\\nguye\\\\Downloads\\\\test3.mp4\")\n",
     "sentence = []\n",
     "threshold = 0.92\n",
